--- a/config.conf
+++ b/config.conf
@@ -1,6 +1,6 @@
 const port = 8000;
 
-const whitelistMode = false; // Disabling enabling the ip whitelist mode. true/false
+const whitelistMode = true; // Disabling enabling the ip whitelist mode. true/false
 
 const whitelist = ['127.0.0.1']; // Example for add several IP in whitelist: ['127.0.0.1', '192.168.0.10']
 
@@ -12,6 +12,8 @@ const charaCloudMode = true; // Disabling enabling charaCloud true/false
 
 const charaCloudServer = 'https://tavernai.net';
 
+const listenIp = '127.0.0.1'; // The IP address to which the socket is bound. This is an advanced setting; do not modify the setting unless you have knowledge of networking.
+
 module.exports = {
-  port, whitelist, whitelistMode, autorun, characterFormat, charaCloudServer, charaCloudMode
+  port, whitelist, whitelistMode, autorun, characterFormat, charaCloudServer, charaCloudMode, listenIp
 };
