--- a/config.conf
+++ b/config.conf
@@ -1,8 +1,8 @@
 const port = 8000;
 
-const whitelistMode = false; // Disabling enabling the ip whitelist mode. true/false
+const whitelistMode = true; // Disabling enabling the ip whitelist mode. true/false
 
-const whitelist = ['127.0.0.1']; // Example for add several IP in whitelist: ['127.0.0.1', '192.168.0.10']
+const whitelist = ['127.0.0.1']; // Example of adding multiple IP addresses to the whitelist: ['127.0.0.1', '192.168.0.10']
 
 const autorun = true; // Autorun in the browser. true/false
 
@@ -12,6 +12,8 @@ const charaCloudServer = 'https://tavernai.net';
 
 const listenIp = '127.0.0.1'; // The IP address to which the socket is bound. This is an advanced setting; do not modify the setting unless you have knowledge of networking.
 
+const connectionTimeoutMS = 2*60*1000; // The maximum duration of the request, after which TAI assumes the server will not reply at all (default is 2 minutes)
+
 module.exports = {
-  port, whitelist, whitelistMode, autorun, characterFormat, charaCloudServer, listenIp
+  port, whitelist, whitelistMode, autorun, characterFormat, charaCloudServer, listenIp, connectionTimeoutMS
 };
